--- a/index.html
+++ b/index.html
@@ -1,28 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <title>Informations nutritives</title>
+
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Andika" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
     </head>
 
     <body>
-        <header>
-            <section class="container">
-                <div class="col-xs-12">
-                    <h1>Informations nutritives</h1>
-                </div>
-            </section>
-        </header>
-        <nav>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
+        <section class="container">
+            <header>
+                <img src="assets/icon/icons8-organic-food.svg">
+                <h1>Informations nutritives</h1>
+
+            </header>
+            <nav>
+                <ul>
+                    <li>
+                        <img src="assets/icon/icons8-banana.svg">
+                        <h2>Banane</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <img src="assets/icon/icons8-cherry.svg">
+                        <h2>Cerises</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>
+                        
+                    </li>
+
+                    <li>
+                        <img src="assets/icon/icons8-kiwi.svg">
+                        <h2>Kiwi</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <img src="assets/icon/icons8-peach.svg">
+                        <h2>Pêche</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <img src="assets/icon/icons8-pear.svg">
+                        <h2>Poire</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li><strong>Les glucides : </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres : </strong>La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>        
+                    </li>
+
+                    <li>
+                        <img src="assets/icon/icons8-pineapple.svg">
+                        <h2>Ananas</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li>Les glucides: <span>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g.</span></li>
+                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <img src="assets/icon/icons8-raspberry.svg">
+                        <h2>Frambroise</h2>
+                        <span class="icon-plus"></span>
+                        <ul class="info">
+                            <li>Les glucides: La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres :</strong> La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <script
+                src="https://code.jquery.com/jquery-3.3.1.min.js"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
+        <script src="assets/script/accordeon.js"></script>
     </body>
 </html>
