--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                         <h2>Banane</h2>
                         <span class="icon-plus"></span>
                         <ul class="info">
-                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
-                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
-                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                            <li><strong>Les glucides : </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres : </strong>La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
                         </ul>
                     </li>
 
@@ -35,9 +35,9 @@
                         <h2>Cerises</h2>
                         <span class="icon-plus"></span>
                         <ul class="info">
-                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
-                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
-                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                            <li><strong>Les glucides : </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres : </strong>La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
                         </ul>
                         
                     </li>
@@ -47,9 +47,9 @@
                         <h2>Kiwi</h2>
                         <span class="icon-plus"></span>
                         <ul class="info">
-                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
-                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
-                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                            <li><strong>Les glucides : </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres : </strong>La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
                         </ul>
                     </li>
 
@@ -58,9 +58,9 @@
                         <h2>Pêche</h2>
                         <span class="icon-plus"></span>
                         <ul class="info">
-                            <li>Les glucides : La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
-                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
-                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                            <li><strong>Les glucides : </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres : </strong>La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
                         </ul>
                     </li>
 
@@ -80,9 +80,9 @@
                         <h2>Ananas</h2>
                         <span class="icon-plus"></span>
                         <ul class="info">
-                            <li>Les glucides: <span>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g.</span></li>
-                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
-                            <li>Les fibres : La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
+                            <li><strong>Les glucides: </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g.</li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les fibres : </strong>La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
                         </ul>
                     </li>
                     <li>
@@ -90,8 +90,8 @@
                         <h2>Frambroise</h2>
                         <span class="icon-plus"></span>
                         <ul class="info">
-                            <li>Les glucides: La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
-                            <li>Les lipides : Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
+                            <li><strong>Les glucides: </strong>La pêche apporte majoritairement des glucides (19,6 g)si on ne prend pas en compte l’eau qui l'a compose à environ 75,8 g. </li>
+                            <li><strong>Les lipides : </strong>Les apports en lipides sont inférieurs à la quantité de lipides moyenne des fruits frais 0,25 VS 0,37 g).</li>
                             <li><strong>Les fibres :</strong> La pêche apporte un peu plus de 3 g de fibres pour 100 g, ce qui en fait une source de fibres.</li>
                         </ul>
                     </li>
